--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,6 +39,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/register, roles: PUBLIC_ACCESS }
         - { path: ^/api/establishment, roles: PUBLIC_ACCESS }
         - { path: ^/api/district, roles: PUBLIC_ACCESS }
         - { path: ^/api/tag, roles: PUBLIC_ACCESS }
